[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/game/levels/alien/Alien.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/consumables.png" type="Texture2D" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 112, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Alien" type="Area2D"]
z_index = -1
collision_layer = 16
collision_mask = 10
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
frames = SubResource( 3 )
frame = 2
playing = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2( 0, 25 )

[connection signal="area_entered" from="." to="." method="_on_Alien_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Alien_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
